# covid-analytics

./: .gitignore  .pre-commit-config.yaml  DF-JOIN.md  README.md  pyproject.toml  referral_campaign.py
.github/workflows/: github_actions.yml
airflow/dags/: covid_analytics.py
airflow/plugins/hooks/: redshift_hook.py
airflow/plugins/libs/: aws_helpers.py  corona_api.py
airflow/plugins/operators/: redshift_operator.py
airflow/plugins/sql_queries/: covid_cases_creation.sql  load_covid_cases.sql
